proj1/tests/error/ast-if_expr-error.py
else:
	print "something right"

elif 3 > 5:
	print "something"
